:fire: Migration von budget_book

--- a/src/main/resources/templates/Sides/Home/Components/navbar.html
+++ b/src/main/resources/templates/Sides/Home/Components/navbar.html
@@ -11,8 +11,8 @@
             th:onclick="|window.location.href='@{/spar/}'|"
             type="button"> Sparkauf
     </button>
-    <button class="me-1 p-3 rounded btn btn-outline-secondary btn-lg text-uppercase fw-bolder" disabled
-            th:onclick="|window.location.href='@{#}'|"
+    <button class="me-1 p-3 rounded btn btn-outline-secondary btn-lg text-uppercase fw-bolder"
+            th:onclick="|window.location.href='@{/budget_book/}'|"
             type="button"> Haushaltsbuch
     </button>
 
