--- a/src/main/resources/templates/Sides/Budget_Book/Home/Components/navbar.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Home/Components/navbar.html
@@ -3,8 +3,7 @@
 
 <div th:fragment="navbar" >
 
-<img src="modern.png" class="m-3 rounded mx-auto d-block" width="200" height="200">
-
+<img th:src="@{/modern.png}" class="m-3 rounded mx-auto d-block" width="200" height="200" />
 <div class="d-grid gap-2 m-5 align-items-center">
 
     <button class="me-1 p-3 rounded btn btn-outline-secondary btn-lg text-uppercase fw-bolder"
