--- a/src/main/resources/templates/Sides/Budget_Book/Statistik/Components/navbar.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Statistik/Components/navbar.html
@@ -6,9 +6,14 @@
     <div class="btn-group">
 
         <button class="p-3 btn btn-outline-light text-uppercase fw-bolder btn-block"
+                th:onclick="|window.location.href='@{/}'|"
+                th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active':''}"
+                type="button"><i class="bi bi-house" style="font-size: 2rem;"></i>
+        </button>
+        <button class="p-3 btn btn-outline-light text-uppercase fw-bolder btn-block"
                 th:onclick="|window.location.href='@{/budget_book/}'|"
                 th:classappend="${#httpServletRequest.getRequestURI() == '/budget_book/' ? 'active':''}"
-                type="button"><i class="bi bi-house" style="font-size: 2rem;"></i>
+                type="button"><i class="bi bi-cash-coin" style="font-size: 2rem;"></i>
         </button>
         <button class="p-3 btn btn-outline-light text-uppercase fw-bolder btn-block"
                 th:onclick="|window.location.href='@{/statistik/showAll/}'|"
