:ambulance: Kategorien eu gesetzt

--- a/src/main/resources/templates/Sides/Spar/Components/banner.html
+++ b/src/main/resources/templates/Sides/Spar/Components/banner.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div class="header d-block opacity-75 bg-secondary bg-gradient text-white p-2" th:fragment="header">
-
+<div class="d-block p-4 opacity-75 bg-success bg-gradient text-white"   th:fragment="banner">
 
 	<div class="container">
 		<div class="row">
