--- a/src/main/resources/templates/Sides/Budget_Book/Buchung/Components/banner.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Buchung/Components/banner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div class="d-block p-4 opacity-75 bg-success bg-gradient text-white"  th:fragment="banner_buchung">
+<div class="d-block p-4 opacity-75 bg-success bg-gradient text-white"  th:fragment="banner">
 
     <div class="container">
         <div class="row">
