--- a/src/main/resources/templates/Sides/Budget_Book/Buchung/neue_buchung.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Buchung/neue_buchung.html
@@ -8,7 +8,7 @@
 
 <div>
 
-    <div th:insert="Sides/Budget_Book/Buchung/Components/banner :: banner_buchung"></div>
+    <div th:insert="Sides/Budget_Book/Buchung/Components/banner :: banner"></div>
     <div class="me-2" th:insert="Sides/Budget_Book/Buchung/Components/formular :: formular"></div>
 
 </div>
