--- a/src/main/resources/templates/Sides/Spar/calc.html
+++ b/src/main/resources/templates/Sides/Spar/calc.html
@@ -6,35 +6,14 @@
 
 <body >
 <div  class="d-block p-2 bg-secondary bg-gradient text-white">
-    <div th:replace="Sides/Spar/Components/header :: header"></div>
+    <div th:replace="Sides/Spar/Components/banner :: banner"></div>
 </div>
 
 <div class="m-2">
 
     <div><label class="fw-bolder">id</label><input id="id"  autocomplete="off" readonly type="number" th:field="${newEntry.id}"/></div>
-    <div><label class="fw-bolder">Artikel</label><input id="product" readonly required type="text" th:field="${newEntry.produkt}"/>
+    <div><label class="fw-bolder">Artikel</label><input id="product" readonly required type="text" th:field="${newEntry.produkt}"/></div>
 
-        <!--
-
-        <form class="was-validated" method="post" th:action="@{/calc/}" th:object="${newEntry}">
-
-
-        <div><label class="fw-bolder">Menge</label><input id="menge" class="form-control" required type="text" th:field="*{menge}"/>
-            <div class="invalid-feedback">Die Menge muss Angeben werden.</div></div>
-        <div th:if="${view == 'editEntry'}"><label class="fw-bolder">Menge Lager</label><input id="mengeLager" class="form-control" required type="text" th:field="*{mengeLager}"/>
-            <div class="invalid-feedback">Die Menge muss Angeben werden.</div></div>
-
-        <div><label class="fw-bolder">MHD</label><input id="mhd" class="form-control" type="date" autocomplete="off" th:field="*{mHDDate}"/></div>
-        <div><label class="fw-bolder">EK-Preis</label><input class="form-control" required type="number" min="0.01" max="10000.00" step="0.01" th:field="*{einkaufsPreis}"/></div>
-        <div><label class="fw-bolder">Listen-Preis</label><input class="form-control" required type="number" min="0.01" max="10000.00" step="0.01" th:field="*{normalPreis}"/></div>
-
-        <div class="btn-group mt-2 me-1 col-12" role="group">
-            <input type="reset" class="btn btn-warning col-6" value="Änderung verwerfen">
-            <input type="submit" class="btn btn-success col-6" value="Speichern">
-        </div>
-
-    </form>
-            -->
 
 </div>
 </body>
