:ambulance: Kategorien eu gesetzt

--- a/src/main/resources/templates/Sides/Budget_Book/Buchung/Components/formular.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Buchung/Components/formular.html
@@ -22,12 +22,12 @@
             <div class="invalid-feedback"> Die Summe muss angegeben werden </div></div>
 
         <div class="m-1">
-            <label class="fw-bolder "> Kategorie </label>
-            <select class="form-select" th:field="*{kategorie}">
-                <option value="Haushalt">Haushalt</option>
-                <option value="Lebensmittel">Lebensmittel</option>
-                <option value="Freizeit">Freizeit</option>
-            </select>
+            <label class="fw-bolder mt-1"> Kategorie muss ausgewählt werden </label>
+            <input list="ShowDataList" class="form-control"  th:field="*{kategorie}">
+            <datalist id="ShowDataList">
+                <option th:each="kategorie : ${kategorien}" th:value="|${kategorie.name}"
+                        th:label="|${kategorie.name}|" >
+            </datalist>
         </div>
 
         <div class="m-1">
