--- a/src/main/resources/templates/Components/versionNummer.html
+++ b/src/main/resources/templates/Components/versionNummer.html
@@ -5,7 +5,8 @@
     <div class="me-5 d-flex flex-row-reverse" th:fragment="version">
         <button title="release" th:text="${@versionsnummer.getVersion()}"
                 type="button" disabled class="btn btn-outline-light btn-sm ms-2"></button>
-        <button th:if="${saldo != null}" title="Saldo: " th:text="${saldo}"
-                type="button" disabled class="btn btn-outline-warning btn-sm ms-2"></button>
+        <button th:if="${displayModel.saldo != null}"
+                th:utext="'Saldo: '+${#numbers.formatDecimal(displayModel.saldo == null ? 0 : displayModel.saldo, 0, 2)} +' €'"
+                type="button" disabled class="btn btn-success btn-sm ms-2"></button>
 
     </div>
