--- a/src/main/resources/templates/Sides/Budget_Book/Buchung/w_buchung.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Buchung/w_buchung.html
@@ -7,10 +7,10 @@
 <body >
 
 <div>
-    <div th:insert="Sides/Buchung/Components/banner :: banner_buchung"></div>
+    <div th:insert="Sides/Budget_Book/Buchung/Components/banner :: banner"></div>
     <div  class="m-2" >
-        <div th:insert="Sides/Buchung/Components/formular_w :: formular"></div>
-        <div  th:insert="Sides/Buchung/Components/table :: tabelleninhalt"></div>
+        <div th:insert="Sides/Budget_Book/Buchung/Components/formular_w :: formular"></div>
+        <div  th:insert="Sides/Budget_Book/Buchung/Components/table :: tabelleninhalt"></div>
 
     </div>
 
