:bookmark: edit und delete zu den

--- a/src/main/resources/templates/Sides/Budget_Book/Buchung/neue_buchung.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Buchung/neue_buchung.html
@@ -10,6 +10,7 @@
 
     <div th:insert="Sides/Budget_Book/Buchung/Components/banner :: banner"></div>
     <div class="me-2" th:insert="Sides/Budget_Book/Buchung/Components/formular :: formular"></div>
+    <div  th:insert="Sides/Budget_Book/Statistik/Components/table :: tabelleninhalt"></div>
 
 </div>
 </body>
