--- a/src/main/resources/templates/Sides/Budget_Book/Statistik/Components/table.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Statistik/Components/table.html
@@ -15,6 +15,7 @@
             <th>Beschreibung</th>
             <th>Kategorie</th>
             <th>Summe</th>
+            <th>Funktionen</th>
         </tr>
 
         </thead>
@@ -25,6 +26,10 @@
             <td><span th:text="${buchung.beschreibung}"></span></td>
             <td><span th:text="${buchung.kategorie}"></span></td>
             <td>€ <span th:utext="${#numbers.formatDecimal(buchung.summe == null ? 0 : buchung.summe, 0, 2)}"></span></td>
+            <td>
+                <a th:href="@{delete/__${buchung.id}__}" class="btn btn-danger me-2">Delete</a>
+                <a th:href="@{edit/__${buchung.id}__}" class="btn btn-warning">Edit</a>
+            </td>
         </tr>
         </tbody>
     </table>
