--- a/src/main/resources/templates/Components/head.html
+++ b/src/main/resources/templates/Components/head.html
@@ -1,10 +1,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <th:block th:fragment="head">
+    <title th:text="${@app_name.getVersion()}"></title>
+    <link rel="shortcut icon" type="image/png" th:href="@{/pic.png}"/>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" th:href="@{/favicon.png}"/>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
