:rocket: Spar um 2 weitere Attribute erweitert

--- a/src/main/resources/templates/Sides/Home/Components/navbar.html
+++ b/src/main/resources/templates/Sides/Home/Components/navbar.html
@@ -3,7 +3,7 @@
 
 <div th:fragment="navbar" >
 
-<img src="logo.png" class="m-3 rounded mx-auto d-block" width="200" height="200">
+<img th:src="@{/pics/logo.png} " class="m-3 rounded mx-auto d-block" width="200" height="200">
 
 <div class="d-grid gap-2 m-5 align-items-center">
 
