--- a/src/main/resources/templates/Components/head.html
+++ b/src/main/resources/templates/Components/head.html
@@ -2,7 +2,7 @@
 
 <th:block th:fragment="head">
     <title th:text="${@app_name.getVersion()}"></title>
-    <link rel="shortcut icon" type="image/png" th:href="@{/pic.png}"/>
+    <link rel="shortcut icon" type="image/png" th:href="@{/pics/pic.png}"/>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
