--- a/src/main/resources/templates/Sides/Spar/Components/table_xl.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table_xl.html
@@ -19,6 +19,8 @@
             <th>L-Preis</th>
             <th th:if="${view == 'lager'}">K-Jahresverbrauch</th>
             <th th:if="${view == 'lager'}">Fehlmenge/Ende MHD</th>
+            <th th:if="${view == 'lager'}">Bestandswert</th>
+            <th th:if="${view == 'lager'}">Ersparnis/Einkauf</th>
             <th th:if="${view == 'lager'}">Extra</th>
         </tr>
         </thead>
@@ -38,10 +40,12 @@
             <td th:if="${view != 'inventur'}"><span th:text="${#temporals.format(entry.buyDate, 'yyyy-MM-dd')}" ></span></td>
             <td><span th:text="${entry.menge}"></span></td>
             <td><span th:text="${#temporals.format(entry.mHDDate, 'yyyy-MM-dd')}" ></span></td>
-            <td th:if="${view != 'inventur'}"><span th:text="${entry.einkaufsPreis}"></span> € </td>
+            <td th:if="${view != 'inventur'}"><span th:text="${entry.einkaufsPreis}+' €'"></span></td>
             <td><span th:text="${entry.normalPreis}"></span> € </td>
             <td th:if="${view == 'lager'}"><span th:utext="${#numbers.formatDecimal(entry.kalkulatorischerJahresverbrauch == null ? 0 : entry.kalkulatorischerJahresverbrauch, 2, 1)}"></span>
             <td th:if="${view == 'lager'}"><span th:utext="${#numbers.formatDecimal(entry.fehlendeMengeBisMHD == null ? 0 : entry.fehlendeMengeBisMHD, 2, 1)}"></span>
+            <td th:if="${view == 'lager'}"><span th:utext="${#numbers.formatDecimal(entry.bestandsWert == null ? 0 : entry.bestandsWert, 1, 2)}+' €'"></span>
+            <td th:if="${view == 'lager'}"><span th:utext="${#numbers.formatDecimal(entry.eingespartDurchDiesemEinkauf == null ? 0 : entry.eingespartDurchDiesemEinkauf, 1, 2)}+' €'"></span>
             <td th:if="${view == 'lager'}">
                 <a th:href="@{delete/__${entry.id}__}" class="btn btn-danger me-2">Delete</a>
                 <a th:href="@{edit/__${entry.id}__}" class="btn btn-warning">Edit</a>
