--- a/src/main/resources/templates/Sides/Spar/Components/table_xl.html
+++ b/src/main/resources/templates/Sides/Spar/Components/table_xl.html
@@ -11,7 +11,7 @@
         <thead class="sticky-top bg-white shadow">
         <tr class="">
             <th>Artikel</th>
-            <th >Restbestand</th>
+            <th>Restbestand</th>
             <th th:if="${view != 'inventur'}">Gekauft</th>
             <th>Menge</th>
             <th>MHD</th>
@@ -28,15 +28,7 @@
         <tbody>
         <tr th:each="entry : ${entries}">
             <td><span th:text="${entry.produkt}"></span></td>
-            <td th:if="${view != 'inventur'}"><span th:text="${entry.mengeLager}"></span></td>
-            <td th:if="${view == 'inventur'}" >
-                <button class="ms-2 me-2 p-1 rounded btn btn-outline-danger indigo-300 btn-lg text-uppercase fw-bolder"
-                th:onclick="|window.location.href='@{/spar/inventur/plus/__${entry.id}__}'|" type="button"><i class="bi bi-plus-square"></i>
-                </button>
-                <span th:utext="${#numbers.formatDecimal(entry.mengeLager == null ? 0 : entry.mengeLager, 2, 1)}"></span>
-                <button class="ms-2 p-1 rounded btn btn-outline-success indigo-300 btn-lg text-uppercase fw-bolder"
-                th:onclick="|window.location.href='@{/spar/inventur/minus/__${entry.id}__}'|" type="button"><i class="bi bi-dash-square"></i>
-                </button></td>
+            <td><span th:text="${entry.mengeLager}"></span></td>
             <td th:if="${view != 'inventur'}"><span th:text="${#temporals.format(entry.buyDate, 'yyyy-MM-dd')}" ></span></td>
             <td><span th:text="${entry.menge}"></span></td>
             <td><span th:text="${#temporals.format(entry.mHDDate, 'yyyy-MM-dd')}" ></span></td>
