--- a/src/main/resources/templates/Sides/Budget_Book/Buchung/Components/formular_w.html
+++ b/src/main/resources/templates/Sides/Budget_Book/Buchung/Components/formular_w.html
@@ -42,9 +42,10 @@
         <div class="m-1">
             <label class="fw-bolder "> Kategorie </label>
             <select class="form-select" th:field="*{kategorie}">
-                <option value="Haushalt">Haushalt</option>
-                <option value="Lebensmittel">Lebensmittel</option>
-                <option value="Freizeit">Freizeit</option>
+                <option th:each="kategorie : ${kategorien}"
+                        th:value="${kategorie.name}"
+                        th:text="${kategorie.name}">
+                </option>
             </select>
         </div>
 
